# zycore-c

./: .gitignore  meson.build
src/: meson.build
